# NonEuclideanEngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json  shader.cpp
archive/: Square.cpp  Square.hpp  hyperboloid.cpp
json/: testNear.json
lib/: CMakeLists.txt
lib/entt/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
lib/imgui/extra/: L2DFileDialog.cpp  L2DFileDialog.h
lib/stb/: CMakeLists.txt
lib/stb/public/src/: stb.c
lib/stb_image/: CMakeLists.txt
lib/stb_image/public/include/: stb_image.h
ne_engine/: CMakeLists.txt  cmake_install.cmake
ne_engine/include/: ne_engine.hpp  utils.hpp
ne_engine/lib/: cmake_install.cmake
ne_engine/lib/glad/: cmake_install.cmake
ne_engine/lib/glfw/: cmake_install.cmake  cmake_uninstall.cmake
ne_engine/lib/glfw/docs/: cmake_install.cmake
ne_engine/lib/glfw/src/: cmake_install.cmake  glfw3.pc
ne_engine/lib/glm/: cmake_install.cmake
ne_engine/lib/glm/glm/: cmake_install.cmake
ne_engine/lib/json/: cmake_install.cmake  nlohmann_json.pc
ne_engine/lib/stb_image/: cmake_install.cmake
ne_engine/ne_engine/: cmake_install.cmake
ne_engine/ne_gl/public/include/: Animation.h  Animation.hpp  App.hpp  Engine.hpp  Render.hpp  ShaderProgram.hpp  Sprite.hpp  Texture.hpp  TextureAtlas.hpp  Tile.hpp  TileMap.hpp
ne_engine/ne_gl/public/src/: Animation.cpp  App.cpp  GLFWContext.cpp  Render.cpp  ShaderProgram.cpp  Sprite.cpp  Texture.cpp  TextureAtlas.cpp  Tile.cpp  TileMap.cpp
ne_engine/ne_graphics/public/include/: Animation.hpp  App.hpp  Camera.hpp  Image.hpp  Render.hpp  RenderPlugin.hpp  Renderer.hpp  Sprite.hpp  Texture.hpp  TextureManager.hpp  Tile.hpp  Window.hpp  WindowPlugin.hpp
ne_engine/ne_graphics/public/src/: Animation.cpp  App.cpp  Engine.cpp  Image.cpp  Render.cpp  RenderPlugin.cpp  Renderer.cpp  Texture.cpp  TextureManager.cpp  Tile.cpp  TileMap.cpp  Window.cpp  WindowPlugin.cpp
ne_engine/ne_input/public/include/: Input.hpp  JSONLoader.hpp
ne_engine/ne_input/public/src/: Input.cpp  JSONLoader.cpp
ne_engine/ne_math/public/include/: HypRotate.hpp  HypTransform.hpp
ne_engine/ne_math/public/src/: HypRotate.cpp  HypTransform.cpp
ne_engine/ne_math/shaders/: pq_color.frag  pq_test.vert  square_test.vert
ne_engine/ne_plugin/public/include/ne_plugin/: DefaultPlugins.hpp
ne_engine/ne_plugin/public/include/ne_plugin/input/: InputPlugin.hpp
ne_engine/ne_plugin/public/include/ne_plugin/window/: GLFWWindow.hpp  Window.hpp  WindowPlugin.hpp
ne_engine/ne_plugin/public/include/plugin/window/: WindowPlugin.hpp
ne_engine/ne_plugin/public/src/: GLFWWindow.cpp  Window.cpp  WindowPlugin.cpp
ne_engine/ne_resmanager/public/include/: ResourceManager.hpp
ne_engine/ne_resmanager/public/src/: ResourceManager.cpp
ne_engine/ne_resource/public/include/: Resource.hpp  ResourceManager.hpp
ne_engine/ne_resource/public/src/: ResourceManager.cpp
ne_engine/ne_shapes/private/include/: CircleArcs.hpp
ne_engine/ne_shapes/private/src/: CircleArcs.cpp
ne_engine/ne_shapes/public/include/: Mesh.hpp  PQTile.hpp  Point.hpp  Polygon.hpp  Rectangle.hpp  Square.hpp  Triangle.hpp
ne_engine/ne_shapes/public/src/: Mesh.cpp  PQTile.cpp  Point.cpp  Polygon.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp
ne_engine/ne_system/public/include/ne_system/: DAG.hpp  Plugin.hpp  Resource.hpp  System.hpp  SystemExecutor.hpp  SystemSchedule.hpp  SystemSet.hpp  SystemThreadPool.hpp
ne_engine/ne_system/public/src/: SystemExecutor.cpp  SystemSchedule.cpp  SystemSet.cpp  SystemThreadPool.cpp
ne_engine/ne_tile/public/include/: Tile.hpp  TileMap.hpp
ne_engine/ne_tile/public/src/: Tile.cpp  TileMap.cpp
ne_engine/ne_ui/: UIComponent.hpp
ne_engine/ne_ui/public/include/: DraggableCanvas.hpp  Image.hpp  UIComponent.hpp
ne_engine/ne_ui/public/include/ui/: UIComponent.hpp
ne_engine/ne_ui/public/include/ui/components/: Canvas.hpp  DraggableCanvas.hpp  FileSelector.hpp  Image.hpp  ToolManager.cpp  ToolManager.hpp
ne_engine/ne_ui/public/include/ui/tools/: AnimationEditor.hpp  KeyMappingsManager.hpp  TextureAtlasBuilder.hpp
ne_engine/ne_ui/public/src/: AnimationEditor.cpp  Canvas.cpp  DraggableCanvas.cpp  FileSelector.cpp  Image.cpp  KeyMappingsManager.cpp  TextureAtlasBuilder.cpp  ToolManager.cpp
ne_engine/ne_util/public/include/ne_util/: DirectedGraph.hpp
ne_engine/public/bindings/: example_bindings.json  output.json
ne_engine/public/include/: Animation.h  Camera.h  CharWrapper.h  CharWrapper.hpp  Engine.h  GLFWContext.hpp  Input.h  InputManager.h  JSONLoader.h  Render.h  ShaderProgram.h  Sprite.h  Sprite.hpp  SpriteRenderer.h  Triangle.h  ne_engine.hpp
ne_engine/public/src/: Camera.cpp  CharWrapper.cpp  Engine.cpp  GLFWContext.cpp  Input.cpp  InputManager.cpp  JSONLoader.cpp  Render.cpp  Sprite.cpp  SpriteRenderer.cpp  Triangle.cpp
ne_engine/system/: DAG.cpp  DAG.hpp  SystemSet.cpp  SystemSet.hpp  SystemThreadPool.cpp  SystemThreadPool.hpp
res/atlases/: atlas.json
res/tilemaps/: FarmTiling.json
shaders/: CMakeLists.txt  color.frag  color.vert  sprite.frag  sprite.vert  texture.frag  texture.vert  vec4.vert
src/: ShaderProgram.cpp  main.cpp
src/bindings/: example_bindings.json
src/engine/: Camera.cpp  Camera.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Sprite.h
tests/: CMakeLists.txt  GuiTesting.cpp  InputTest.cpp  PQ_tile_test.cpp  ResourceManagerTesting.cpp  SpriteTesting.cpp  TileMapTest.cpp  hello_new_triangle.cpp  hyperboloid.cpp  input_test.cpp  main.cpp  makeMap.py  moving_tiles.cpp  ne_squares_test.cpp  point_square_demo.cpp  render_test.cpp  render_test_noEuclid.cpp
tests/bindings/: example_bindings.json
tests/json/: testNear.json  testNear2.json  testTileMap.json
tests/unitTests/: CMakeLists.txt  HelloTest.cpp  NewTest.cpp
